--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "publisher": "JackBAI",
   "dependencies": {
     "chromedriver": "^93.0.1",
+    "constants": "0.0.2",
     "geckodriver": "^2.0.4",
     "selenium-webdriver": "^4.0.0-rc-2"
   },
