--- a/package.json
+++ b/package.json
@@ -55,12 +55,13 @@
     "eslint": "^7.27.0",
     "glob": "^7.1.7",
     "mocha": "^8.4.0",
-    "typescript": "^4.3.2",
+    "typescript": "^4.4.3",
     "vscode-test": "^1.5.2"
   },
   "publisher": "JackBAI",
   "dependencies": {
     "chromedriver": "^93.0.1",
+    "constants": "^0.0.2",
     "geckodriver": "^2.0.4",
     "selenium-webdriver": "^4.0.0-rc-2"
   },
