added some more features

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "chromedriver": "^93.0.1",
     "constants": "^0.0.2",
+    "fs": "^0.0.1-security",
     "geckodriver": "^2.0.4",
     "selenium-webdriver": "^4.0.0-rc-2"
   },
