finished everything except pushing the code back to the website

--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "constants": "^0.0.2",
     "fs": "^0.0.1-security",
     "geckodriver": "^2.0.4",
+    "http": "^0.0.1-security",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "selenium-webdriver": "^4.0.0-rc-2"
   },
   "repository": {
