--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "http": "^0.0.1-security",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "selenium-webdriver": "^4.0.0-rc-2"
+    "selenium-webdriver": "^4.0.0-rc-2",
+    "sleep": "^6.3.0"
   },
   "repository": {
     "type": "git",
