finished the headless feedback part

--- a/package.json
+++ b/package.json
@@ -62,6 +62,12 @@
                     "type": "string",
                     "default": "null",
                     "description": "The Lab Number you want to work on now. For labs 5.1 and 5.2 it's the same. For example, please type in '5.1' (without quotation marks)."
+                },
+                "ece408.headless":
+                {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Whether you want to turn on the headless mode. The headless mode means you do not have the chrome browser interface and use pure CLI instead."
                 }
             }
         }
